--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
-    "lint": "eslint . --config .eslintrc.js",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx,.vue . --config .eslintrc.js",
     "server": "feathers-plus",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "static": "nuxt generate",
